# fccoelho.github.com

./: .gitignore  .gitmodules  Colaboradores.html  Equipe.html  Makefile  Produtos.html  Projetos.html  Publicacoes.html  bigdata.html  config.toml  culturomics.html  epidemio.html  fabfile.py  genindex.html  hugo.toml  index.html  mbj.html  mobilidade.html  objects.inv  pubs.md  pubs.pkl  pypln.html  pyproject.toml  refs.bib  search.html  searchindex.js  sen.html  update_pubs.py
.github/workflows/: hugo.yaml
archetypes/: article.md  project.md
content/: _index.md  _index.pt.md  archive.pt.md
content/article/: pandemics.md  pandemics.pt.md
content/link/: infodengue.md  infodengue.pt.md  mosqlimate.md  mosqlimate.pt.md
content/page/: about-this.md  about-this.pt.md  github.md  index.md  projects.md  projects.pt.md  publications.md  publications.pt.md  team.md  team.pt.md
content/portfolio/: _index.md
content/project/: _index.md  _index.pt.md  infodengue.md  infodengue.pt.md  mosqlimate.md  mosqlimate.pt.md  ursa.md  ursa.pt.md
content/publications/: _index.md
content/quote/: edward-snowden-privacy.pt.md
doctrees/: Colaboradores.doctree  Equipe.doctree  Produtos.doctree  Projetos.doctree  Publicacoes.doctree  bigdata.doctree  culturomics.doctree  environment.pickle  epidemio.doctree  index.doctree  mbj.doctree  mobilidade.doctree  pypln.doctree  sen.doctree
resources/_gen/assets/sass/sass/: style.sass_511aa33e99371f93fbf403479ebfd32e.content  style.sass_511aa33e99371f93fbf403479ebfd32e.json
source/: conf.py
