[tool.poetry]
name = "mywebsite"
version = "0.1.0"
description = "automate website"
authors = ["Flavio Codeço Coelho <fccoelho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.1"
scholarly = "^1.7.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
