[tool.poetry]
name = "mywebsite"
version = "0.1.0"
description = "automate website"
authors = ["Flavio Codeço Coelho <fccoelho@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">3.11,<3.14"
pandas = "^2.1.1"
scholarly = "^1.7.11"
pybtex = "^0.24.0"
tqdm = "^4.66.1"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
